got done-ing a li for todo done

--- a/theme.css
+++ b/theme.css
@@ -9,3 +9,11 @@ header{
 .low{
   background-color:#0F0;
 }
+
+input:checked{
+  text-decoration:line-through;
+}
+
+#newItemArea{
+	background-color:#FF0;
+}
